// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavSide highlight current component 1`] = `
<ul class="nav-side">
  <li class="item">
    <a href="#/Foo" class="anchor current">
      Foo
    </a>
    <div class="child-wrapper" name="child">
      <ul class="child-list">
        <li class="child-item">
          <a href="#/Foo/Pattern%201" class="child-anchor">
            Pattern 1
          </a>
        </li>
        <li class="child-item">
          <a href="#/Foo/Pattern%202" class="child-anchor">
            Pattern 2
          </a>
        </li>
      </ul>
    </div>
  </li>
  <li class="item">
    <a href="#/Bar" class="anchor">
      Bar
    </a>
    <div class="child-wrapper" style="display: none;" name="child">
      <ul class="child-list">
        <li class="child-item">
          <a href="#/Bar/Pattern%201" class="child-anchor">
            Pattern 1
          </a>
        </li>
      </ul>
    </div>
  </li>
</ul>
`;

exports[`NavSide highlight current pattern 1`] = `
<ul class="nav-side">
  <li class="item">
    <a href="#/Foo" class="anchor">
      Foo
    </a>
    <div class="child-wrapper" name="child">
      <ul class="child-list">
        <li class="child-item">
          <a href="#/Foo/Pattern%201" class="child-anchor current">
            Pattern 1
          </a>
        </li>
        <li class="child-item">
          <a href="#/Foo/Pattern%202" class="child-anchor">
            Pattern 2
          </a>
        </li>
      </ul>
    </div>
  </li>
  <li class="item">
    <a href="#/Bar" class="anchor">
      Bar
    </a>
    <div class="child-wrapper" style="display: none;" name="child">
      <ul class="child-list">
        <li class="child-item">
          <a href="#/Bar/Pattern%201" class="child-anchor">
            Pattern 1
          </a>
        </li>
      </ul>
    </div>
  </li>
</ul>
`;

exports[`NavSide renders declarations 1`] = `
<ul class="nav-side">
  <li class="item">
    <a href="#/Foo" class="anchor">
      Foo
    </a>
    <div class="child-wrapper" style="display: none;" name="child">
      <ul class="child-list">
        <li class="child-item">
          <a href="#/Foo/Pattern%201" class="child-anchor">
            Pattern 1
          </a>
        </li>
        <li class="child-item">
          <a href="#/Foo/Pattern%202" class="child-anchor">
            Pattern 2
          </a>
        </li>
      </ul>
    </div>
  </li>
  <li class="item">
    <a href="#/Bar" class="anchor">
      Bar
    </a>
    <div class="child-wrapper" style="display: none;" name="child">
      <ul class="child-list">
        <li class="child-item">
          <a href="#/Bar/Pattern%201" class="child-anchor">
            Pattern 1
          </a>
        </li>
      </ul>
    </div>
  </li>
</ul>
`;
